--- a/src/app/person-center/component/album/add-photo/add-photo.component.html
+++ b/src/app/person-center/component/album/add-photo/add-photo.component.html
@@ -1,8 +1,8 @@
 <main class="add-photo-main">
-  <p class="add-photo-title">
+  <p class="big-dialog-title">
     <i class="material-icons">add_a_photo</i>
     上传相片
-    <i class="material-icons add-photo-close" (click)="closeAddPhotoDialog(close)">close</i>
+    <i class="material-icons dialog-close" (click)="closeAddPhotoDialog(close)">close</i>
   </p>
   <!--上传照片操作-->
 
