--- a/src/app/person-center/component/album/show-photos/show-photos.component.css
+++ b/src/app/person-center/component/album/show-photos/show-photos.component.css
@@ -10,6 +10,7 @@
 .photos-top{
   height: 100px;
   padding: 10px;
+  position: relative;
 }
 .photos-top-left{
   display: inline-block;
@@ -206,20 +207,22 @@
   color: black;
   display: none;
   font-size: 14px;
+  padding-left: 5px;
+  padding-right: 5px;
   border-bottom: 1px solid rgb(233,233,233);
 }
 /*相片名称*/
 .photo-name{
   text-align: center;
-  height: 30px;
-  line-height: 33px;
+  height: 25px;
+  line-height: 25px;
   font-size: 15px;
   background: white;
   margin-bottom: 5px;
 }
 /*相片动态操作操作*/
 .photo-art-operation{
-  padding: 2px 1px 8px 10px;
+  padding: 2px 1px 5px 10px;
   display: none;
 
 }
@@ -253,6 +256,9 @@
 }
 /*菜单选项*/
 .mat-menu-item{
-  height: 32px!important;
-  line-height: 32px !important;
+  height: 35px!important;
+  line-height: 35px !important;
+}
+.mat-menu-item:hover{
+  background: rgb(233,233,233);
 }
