--- a/src/app/person-center/component/album/add-photo/add-photo.component.html
+++ b/src/app/person-center/component/album/add-photo/add-photo.component.html
@@ -2,7 +2,7 @@
   <p class="big-dialog-title">
     <i class="material-icons">add_a_photo</i>
     上传相片
-    <i class="material-icons dialog-close" (click)="closeAddPhotoDialog(close)">close</i>
+    <span class="dialog-close"><i class="material-icons" (click)="closeAddPhotoDialog(close)">close</i></span>
   </p>
   <!--上传照片操作-->
 
