--- a/src/app/person-center/component/album/show-photos/show-photos.component.css
+++ b/src/app/person-center/component/album/show-photos/show-photos.component.css
@@ -128,7 +128,7 @@
   padding-right: 10px;
 }
 /*照片总的包裹*/
-.photo-all-wrapper{/*170,130*/
+.photo-all-wrapper{
   width: 18%;
   max-width: 170px;
   max-height: 170px;
