--- a/src/app/person-center/component/album/show-photos/show-one-photo/show-one-photo.component.css
+++ b/src/app/person-center/component/album/show-photos/show-one-photo/show-one-photo.component.css
@@ -13,31 +13,34 @@
   margin-right: 320px;
 }
 .photo-content {
-  padding-top: 50px;
   position: absolute;
   left: 0;
   top: 0;
   right: 0;
-  bottom: 70px;
+  bottom: 0;
 }
 /*相片*/
-.photo{
-  height: 100%;
+.big-photo{
+  max-width: 100%;
+  max-height: 100%;
   top: 45%;
   left: 50%;
   position: absolute;
   transform: translate(-50%, -45%)
 }
 /*相册操作div*/
-.show-photo-operation{
-  bottom: 5px;
+.photo-operation{
+  bottom: 0;
   width: 100%;
   position: absolute;
-  text-align: center;
-  color: rgb(160,160,160);
+  color: white;
   font-size: 14px;
+  background: rgba(0,0,0,0.5);
 }
-
+.photo-operation-content{
+  margin: auto;
+  width: 430px;
+}
 /*相册名称*/
 .album-name{
 
@@ -81,12 +84,68 @@
 }
 /*照片列表*/
 .photo-list{
-  height: 80px;
+  height: 120px;
   width: 100%;
- /* background: rgba(51,51,51,0.5);*/
-  background: white;
+  background: rgb(10,10,10);
   bottom: 0;
   position: absolute;
+  padding-bottom: 10px;
+}
+/*照片列表标题*/
+.photo-list-title{
+  height: 30px;
+  line-height: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
+  background: rgba(100,100,100,0.5);
+}
+/*关闭相册列表*/
+.close-photo-list{
+  float: right;
+  font-size: 20px;
+  margin-top: 5px;
+  cursor: pointer;
+}
+/*上一页*/
+.prev-photo{
+  position: absolute;
+  left: 10px;
+  top: 60px;
+  cursor: pointer;
+}
+.prev-photo i, .next-photo i{
+  font-size: 45px;
+}
+/*下一页*/
+.next-photo{
+  position: absolute;
+  right: 10px;
+  cursor: pointer;
+  top: 60px;
+}
+
+/*相片列表内容*/
+.photo-list-content{
+  margin: auto;
+  height:85px;
+  margin-top: 6px;
+  overflow: hidden;
+}
+/*直接包裹相片的div*/
+.photo-list-wrapper{
+  height: 80px;
+  width: 99999px;
+  position: relative;
+}
+.pre-photo{
+  width: 80px;
+  height: 80px;
+  margin-left: 5px;
+  cursor: pointer;
+  border: solid 2px rgba(0,0,0,0);
+}
+.pre-photo-active{
+  border: solid 2px orange;
 }
 /*右边评论部分*/
 .show-photo-right{
@@ -96,5 +155,14 @@
   width: 320px;
   top: 0;
   right: 0;
+}
+.prevCursor{
+  cursor: url('../../../../../../assets/img/pic_prev.cur'),auto;
+}
+.nextCursor{
+  cursor: url('../../../../../../assets/img/pic_next.cur'),auto;
+}
+.zoomOutCursor{
+  cursor: zoom-out;
 }
 
