--- a/src/app/share/component/art-discussion/art-discussion.component.html
+++ b/src/app/share/component/art-discussion/art-discussion.component.html
@@ -3,11 +3,11 @@
   <!--写评论-->
   <div class="write-discussion">
     <div [ngBusy]="{busy:[discussionSubscribe],message:'处理中,请稍候'}"></div>
-    <img class="my-profile-img" [src]="api.IMAGE_PREFIX+homeService.homeInfo.profileImg"/>
-    <div #discussionEditor id="discussion-editor" class="discussion-editor" [froalaEditor]="editorOptions" [(froalaModel)]="sendDiscussion.parentDiscussion.content"></div>
+    <img *ngIf="artArgs.artType!='相片'"  class="my-profile-img" [src]="api.IMAGE_PREFIX+homeService.homeInfo.profileImg"/>
+    <div #discussionEditor [ngClass]="{'photo-discussion-editor':artArgs.artType=='相片'}"  class="discussion-editor" [froalaEditor]="editorOptions" [(froalaModel)]="sendDiscussion.parentDiscussion.content"></div>
     <button class="send-discussion-btn" md-raised-button color="primary" (click)="insertDiscussion()">评论</button>
-    <div class="all-face-wrapper">
-      <button class="toggle-face-btn" md-icon-button (click)="toggleFace()">
+    <div class="all-face-wrapper" *ngIf="artArgs.artType!='相片'">
+      <button class="toggle-face-btn"  md-icon-button (click)="toggleFace()">
         <i  class="material-icons face-ico">sentiment_very_satisfied</i>
       </button>
       <div class="face-wrapper" *ngIf="faceOpened" [@flyXInOutFromTop]>
